Fixed Application Record Update and Added Emojis, to application embed